CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(hiredis)

SET(HIREDIS_INCLUDE
   "${CMAKE_CURRENT_SOURCE_DIR}/include" PARENT_SCOPE
)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/include)

SET(HIREDIS_SOURCE
	src/async.c
	src/dict.c
	src/hiredis.c
	src/net.c
	src/sds.c
)

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

ADD_LIBRARY(hiredis STATIC ${HIREDIS_SOURCE})

TARGET_LINK_LIBRARIES(hiredis)